<resources>
    <string name="app_name">Reception Loading - Test</string>
    <string name="pay_to">Pay To</string>
    <string name="pieces">Pieces</string>
    <string name="pieces_removed">Pieces removed successfully!!!…</string>
    <string name="product">Product :</string>
    <string name="product_name">Product Name</string>
    <string name="project_id">fieldinventory-370f5</string>
    <string name="purchase_contract">Purchase Contract</string>
    <string name="received_date">Received Date</string>
    <string name="received_date_1">Received Date :</string>
    <string name="reception">Reception</string>
    <string name="reception_close">Reception has been closed successfully!!!…</string>
    <string name="reception_close_error">Error when closing the reception</string>
    <string name="reception_details">Reception Details</string>
    <string name="reception_details_1">Reception Details</string>
    <string name="reception_list">Reception List</string>
    <string name="reception_open">Reception has been opened successfully!!!…</string>
    <string name="reception_open_error">Error when opening the reception</string>
    <string name="reset">Reset</string>
    <string name="seal_number">Seal Number</string>
    <string name="search">Search</string>
    <string name="search_by_girth_classification">Search by category</string>
    <string name="search_by_length_classification">Search by length classification</string>
    <string name="search_by_shipping_line">Search by shipping line</string>
    <string name="search_by_supplier">Search by supplier</string>
    <string name="search_country">Search by country</string>
    <string name="search_measurement_system">Search by measurement system</string>
    <string name="search_menu_title">Search</string>
    <string name="search_purchase_contract">Search by purchase contract</string>
    <string name="search_supplier_product">Search by wood species</string>
    <string name="search_supplier_product_type">Search by wood type</string>
    <string name="search_warehouse">Search by warehouse</string>
    <string name="select">Select</string>
    <string name="select_country">Select the country</string>
    <string name="select_purchase_contract">Select the purchase contract</string>
    <string name="select_supplier">Select the supplier</string>
    <string name="select_supplier_product">Select the supplier product</string>
    <string name="select_supplier_product_type">Select the supplier product type</string>
    <string name="select_upload_image">Upload Image</string>
    <string name="shipping_line">Shipping Line</string>
    <string name="status">Status</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_name_1">Supplier Name :</string>
    <string name="synchronization">Synchronization</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_done">Done</string>
    <string name="text_ok">OK</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="total_gross_volume">Gross Volume</string>
    <string name="total_gross_volume_1">Total Gross Volume :</string>
    <string name="total_net_volume">Net Volume</string>
    <string name="total_net_volume_1">Total Net Volume :</string>
    <string name="total_pieces">Total Pieces</string>
    <string name="total_pieces2">Total Pieces</string>
    <string name="total_pieces_1">Total Pieces :</string>
    <string name="truck_plate_number">Truck Plate Number</string>
    <string name="truck_plate_number_1">Truck Plate Number :</string>
    <string name="warehouse">Warehouse</string>
    <string name="warehouse_name_1">Warehouse Name :</string>
    <string name="warning">Warning</string>
    <string name="wood_species">Wood Species</string>
    <string name="wood_type">Wood Type</string>
    <string name="net_volume">Net Volume</string>
    <string name="next">Next</string>
    <string name="no_containers_available_please_create_and_select">No containers available.\nPlease create and select.</string>
    <string name="no_data_found">No data found</string>
    <string name="no_internet">No internet connection. Make sure that Wi-Fi or mobile data is turned on, then try again.</string>
    <string name="no_pending_reception_available">No pending reception available!!!…</string>
    <string name="open">Open</string>
    <string name="open_container_confirmation">Are you sure that you want to open the container?</string>
    <string name="open_reception_confirmation">Are you sure that you want to open the reception?</string>
    <string name="opened">Open</string>
    <string name="image_removed">Image has been removed successfully!!!…</string>
    <string name="image_uploaded">Image uploaded successfully!!!…</string>
    <string name="information">Information</string>
    <string name="invalid_user">Incorrect username or password</string>
    <string name="inventory_order">Inventory Order</string>
    <string name="inventory_order_1">Inventory Order :</string>
    <string name="item_view_role_description">Tab</string>
    <string name="label">Label</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="length">Length</string>
    <string name="length1">Length</string>
    <string name="length_classification">Length Classification</string>
    <string name="length_error">Length shouldn\'t be empty</string>
    <string name="logistic_cost">Logistic Cost</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="gross_volume_threshold">Gross volume should be lesser than or equal to 20.5 m³</string>
    <string name="girth_classification">Categoría</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="error_update_data">Error when updating the data</string>
    <string name="exitapp">Press again back to exit from the app</string>
    <string name="export_database">Export Database</string>
    <string name="delete_data_confirmation">Are you sure you want to delete the data?</string>
    <string name="delete_image_confirmation">Are you sure you want to delete the image?</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dispatch">Container</string>
    <string name="dispatch_date">Dispatch Date</string>
    <string name="edit_pieces">Edit Pieces</string>
    <string name="error">Error</string>
    <string name="circumference">Circumference</string>
    <string name="circumference1">Circumference</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="close_container">Close Container</string>
    <string name="close_container_confirmation">Are you sure want to close the container?.</string>
    <string name="close_reception">Close Reception</string>
    <string name="close_reception_confirmation">Are you sure that you want to close the reception?</string>
    <string name="closed">Closed</string>
    <string name="common_error">There is an error. Please try again.</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_message">Are you sure want to go back?</string>
    <string name="container_close">Container has been closed successfully!!!…</string>
    <string name="container_close_error">Error when closing the container</string>
    <string name="container_created">Container created successfully</string>
    <string name="container_data_capture">Container Data Capture</string>
    <string name="container_list">Container List</string>
    <string name="container_number">Container Number</string>
    <string name="container_number_1">Container #</string>
    <string name="container_number_exists">Container Number already exists</string>
    <string name="container_open">Container has been opened successfully!!!…</string>
    <string name="container_open_error">Error when opening the container</string>
    <string name="container_selection">Container Selection</string>
    <string name="contract_code_1">Purchase Contract Code :</string>
    <string name="country">Country</string>
    <string name="create">Create</string>
    <string name="create_containers">Create Container</string>
    <string name="create_dispatch">Create Container</string>
    <string name="create_farm">Create Farm</string>
    <string name="create_reception">Create Reception</string>
    <string name="dashboard">Dashboard</string>
    <string name="data">Data</string>
    <string name="data_synced_success">Data synced successfully!!!…</string>
    <string name="data_updated">Data updated successfully!!!…</string>
    <string name="database_export_failed">Database Exported Failed</string>
    <string name="database_export_success">Database Exported Successfully</string>
    <string name="category">Category</string>
    <string name="account_active">Your account is in Inactive. Please contact admin to get more details</string>
    <string name="action">Action</string>
    <string name="action_settings">Settings</string>
    <string name="add">ADD</string>
    <string name="add_container">Add Container</string>
    <string name="add_pieces">Add Pieces</string>
    <string name="farm_loading">Farm Loading</string>
    <string name="measurement_system_1">Measurement System :</string>
    <string name="measurement_systems">Measurement System</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="close_farm">Close Farm</string>
    <string name="farm_details">Farm Details</string>
    <string name="save">Save</string>
</resources>