<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_back" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin"
            android:layout_marginBottom="60dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCreateFarm"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/bg_button_rounded"
                    android:enabled="true"
                    android:fontFamily="@font/montserrat_semibold"
                    android:shadowColor="@color/colorDarkGrey"
                    android:shadowDx="5"
                    android:shadowDy="6"
                    android:text="@string/create_farm"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_semimedium" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xlarge_margin"
                android:baselineAligned="false"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.15"
                            android:background="@color/colorLightGrey1"
                            android:fontFamily="@font/montserrat_semibold"
                            android:gravity="center"
                            android:padding="@dimen/medium_margin"
                            android:text="@string/inventory_order"
                            android:textColor="@color/colorCharcoal"
                            android:textSize="@dimen/text_lmedium" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.30"
                            android:background="@color/colorLightGrey1"
                            android:fontFamily="@font/montserrat_semibold"
                            android:gravity="center"
                            android:padding="@dimen/medium_margin"
                            android:text="@string/supplier_name"
                            android:textColor="@color/colorCharcoal"
                            android:textSize="@dimen/text_lmedium" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.15"
                            android:background="@color/colorLightGrey1"
                            android:fontFamily="@font/montserrat_semibold"
                            android:gravity="center"
                            android:padding="@dimen/medium_margin"
                            android:text="@string/purchase_date"
                            android:textColor="@color/colorCharcoal"
                            android:textSize="@dimen/text_lmedium" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.15"
                            android:background="@color/colorLightGrey1"
                            android:fontFamily="@font/montserrat_semibold"
                            android:gravity="center"
                            android:padding="@dimen/medium_margin"
                            android:text="@string/total_pieces"
                            android:textColor="@color/colorCharcoal"
                            android:textSize="@dimen/text_lmedium" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.15"
                            android:background="@color/colorLightGrey1"
                            android:fontFamily="@font/montserrat_semibold"
                            android:gravity="center"
                            android:padding="@dimen/medium_margin"
                            android:text="@string/total_gross_volume"
                            android:textColor="@color/colorCharcoal"
                            android:textSize="@dimen/text_lmedium" />
                        
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1"
                            android:background="@color/colorLightGrey1"
                            android:fontFamily="@font/montserrat_semibold"
                            android:gravity="center"
                            android:padding="@dimen/medium_margin"
                            android:text="@string/action"
                            android:textColor="@color/colorCharcoal"
                            android:textSize="@dimen/text_lmedium" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvNoFarm"
                        style="@style/style_TitleText_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:fontFamily="@font/montserrat_semibold"
                        android:gravity="center"
                        android:padding="@dimen/padding_large"
                        android:text="@string/no_data_found"
                        android:textColor="@color/colorCharcoal"
                        android:textSize="@dimen/text_xxlarge"
                        android:visibility="gone" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvFarmLists"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:isScrollContainer="true"
                        android:keepScreenOn="true"
                        android:nestedScrollingEnabled="true"
                        android:scrollbars="none"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
